--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jitin Doriya",
   "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
     "express": "^4.18.2",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.9.9",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
